  This is intended for use by Android, but could be used in other environments.
  If using this alternative jar, a time-zone system property must be set, either
  "org.joda.time.DateTimeZone.Provider" or "org.joda.time.DateTimeZone.Folder".
  The default behaviour in the standard jar file is unchanged, with time-zone data included in the jar file.


Compatibility with 2.5
----------------------
Build system - Yes

Binary compatible - Yes

Source compatible - Yes

Serialization compatible - Yes

Data compatible - Yes, except
 - DateTimeZone data updated to version 2014j

Semantic compatible - Yes


Deprecations since 2.5
----------------------


Bug fixes since 2.5
-------------------
- Handle complex prefix/suffix combinations [#194, #203]
  For example, 'M' for months and 'm' for minutes.
  Parser is generally case insensitive, but handles this specific case sensitivity

- Attempt to tackle an Android deadlock [#196]
  Use dedicated lock objects instead of locking on the class object

- Fix name provider [#176]
  Name provider relied on tzdb short names matching JDK data names
  This has ceased to be true due to recent changes in tzdb, so changed to a different algorithm
  Data returned still depends on the JDK data, not the tzdb
  Thus, tzdb may say AEST for Sydney Australia, but if the JDK still has EST, then that is what you get

- Fix Asia/Dhaka time-zone [#208]
  Problem caused by time-zone ending at 24:00 on December 31st
  Model change as being as 23:59:59.999

- Fix time-zone compilation tests


Scala
--------
Joda-Time uses annotations from Joda-Convert.
In the Java programming language, this dependency is optional, however in Scala it is not.
Scala users must manually add the Joda-Convert v1.2 dependency.


Feedback
--------
Feedback is best received using GitHub issues and Pull Requests.
https://github.com/JodaOrg/joda-time/

Feedback is also welcomed via the joda-interest mailing list.

The Joda team
http://www.joda.org/joda-time/